tests/semantic/invalid/return_type_mismatch.src
fn foo() -> int {
    return 3.14;
}