tests/semantic/invalid/return_type_mismatch.expected
semantic error at return_type_mismatch.src:2:5: return type mismatch in 'foo': expected int, got float
  note: function declared at 1:1